fixed slider buttons on safari

--- a/src/styles/components/_slider.scss
+++ b/src/styles/components/_slider.scss
@@ -7,16 +7,22 @@
     position: relative;
     background-color: transparent;
     border: 2px solid #32394c;
-    border-radius: 50%;
+    border-radius: 100px;
     width: 22px;
     height: 22px;
-    display: grid;
-    place-items: center;
+    padding: 0;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
     cursor: pointer;
     transition: background-color 200ms ease-in-out;
 
+    &:focus,
     &:hover {
       background-color: var(--clr-blue-hover);
+
       i {
         color: #fff;
       }
@@ -24,7 +30,7 @@
 
     i {
       color: #32394c;
-      font-size: 0.75rem;
+      font-size: 14px;
       transition: color 200ms ease-in-out;
     }
   }
